使用 Colaboratory 建立

--- a/TKU_AI_411631269.ipynb
+++ b/TKU_AI_411631269.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMKtAXZ/ZP6OwF3plbOueno",
+      "authorship_tag": "ABX9TyO9oQBgJoP9yxUZBZikhhl7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -207,9 +207,70 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "chin = int(input(\"請輸入國文成績:\"))\n",
+        "eng = int(input(\"請輸入英文成績:\"))\n",
+        "math = int(input(\"請輸入數學成績:\"))\n",
+        "print(\"你的總成績為：\")\n",
+        "print(chin + eng + math)"
+      ],
+      "metadata": {
+        "id": "SyItWWSbXECI",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6adb2676-93a3-4172-a735-de03f18a7d0b"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "請輸入國文成績:50\n",
+            "請輸入英文成績:60\n",
+            "請輸入數學成績:70\n",
+            "你的總成績為：\n",
+            "180\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "u = int(input('請輸入梯形上底長度:'))\n",
+        "d = int(input('請輸入梯形下底長度:'))\n",
+        "h = int(input('請輸入梯形高度:'))\n",
+        "a = (u + d)* h / 2\n",
+        "print('梯形面積:',a)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eF_RduValwdm",
+        "outputId": "91cc3857-361c-411f-a15f-57392874e2b1"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "請輸入梯形上底長度:3\n",
+            "請輸入梯形下底長度:4\n",
+            "請輸入梯形高度:3\n",
+            "梯形面積: 10.5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "SyItWWSbXECI"
+        "id": "JoLW4d7Imugl"
       },
       "execution_count": null,
       "outputs": []
